--- a/contents/config.yml
+++ b/contents/config.yml
@@ -3,3 +3,6 @@ page-top-title: Yourname
 top-section-bg-text: Be what you wanna be
 home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
 copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+site_name: "Novaleo"
+site_description: "大模型算法蒟蒻 | AI agent researcher"
+email: "15062791135@163.com"
