--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,7 +1,7 @@
-title: Yourname's Homepage
-page-top-title: Yourname
-top-section-bg-text: Be what you wanna be
-home-subtitle: Yourname&ensp;|&ensp;上杉绘梨衣
+title: Yang Lin's Homepage
+page-top-title: Nova_leo
+top-section-bg-text: Never stop
+home-subtitle: Nova_leo&ensp;|&ensp;林阳
 copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
 site_name: "Novaleo"
 site_description: "大模型算法蒟蒻 | AI agent researcher"
