--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,8 +1,8 @@
 title: Yang Lin's Homepage
-page-top-title: Nova_leo
+page-top-title: Welcome to Yang Lin's personal homepage
 top-section-bg-text: Never stop
 home-subtitle: Information
-copyright-text: '&copy; Yourname 2023-2025. All Rights Reserved.'
+copyright-text: '&copy; Yang Lin 2025-2026. All Rights Reserved.'
 site_name: "Novaleo"
 site_description: "大模型算法蒟蒻 | AI agent researcher"
 email: "15062791135@163.com"
